--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#media files
+media/**
+
 # End of https://www.gitignore.io/api/windows,visualstudiocode
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
